precompiles/macro/tests/compile-fail/precompile/handle/missing.stderr
error: Precompile methods must have at least 1 parameter (the PrecompileHandle)
  --> tests/compile-fail/precompile/handle/missing.rs:26:2
   |
26 |     fn foo() {
   |     ^^^^^^^^
